--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
+    "jade": "^1.11.0",
     "semantic-ui": "latest",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
