--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "iottalk-gui",
   "dependencies": {
+    "jqb-array-remove": "0.0.1",
     "vue": "1.x",
     "vue-resource": "^0.9.3",
     "vue-router": "latest"
