--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "iottalk-gui",
   "dependencies": {
     "jqb-array-remove": "0.0.1",
+    "mqtt": "^2.0.0",
     "vue": "1.x",
     "vue-resource": "^0.9.3",
     "vue-router": "latest"
@@ -17,6 +18,6 @@
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^8.5.3",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.2"
   }
 }
