--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
     "jqb-array-remove": "0.0.1",
     "mqtt": "^2.0.0",
     "vue": "1.x",
+    "vue-progressbar": "^0.3.0",
     "vue-resource": "^0.9.3",
     "vue-router": "latest"
   },
