--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "jqb-array-remove": "0.0.1",
     "mqtt": "^2.0.0",
+    "uuid": "^2.0.3",
     "vue": "1.x",
     "vue-progressbar": "^0.3.0",
     "vue-resource": "^0.9.3",
