--- a/app/package.json
+++ b/app/package.json
@@ -14,11 +14,11 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.25.0",
     "jade": "^1.11.0",
     "semantic-ui": "^2.2.4",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^8.5.4",
+    "vue-loader": "9.x",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2"
   }
