--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
-    "jade": "^1.11.0",
+    "pug": "^2.0.0-beta6",
     "semantic-ui": "^2.2.4",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "9.x",
