--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "iottalk-gui",
   "dependencies": {
+    "animate.css": "^3.5.2",
     "jqb-array-remove": "0.0.1",
     "mqtt": "^2.0.0",
     "uuid": "^2.0.3",
@@ -15,8 +16,11 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "pug": "^2.0.0-beta6",
     "semantic-ui": "^2.2.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "9.x",
     "vue-style-loader": "^1.0.0",
