--- a/app/package.json
+++ b/app/package.json
@@ -21,5 +21,8 @@
     "vue-loader": "9.x",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2"
+  },
+  "scripts": {
+    "dev": "webpack --progress --colors --watch"
   }
 }
