--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.16.0",
+    "babel-runtime": "^6.20.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "pug": "^2.0.0-beta6",
